--- a/Dockerfile/Dockerfile
+++ b/Dockerfile/Dockerfile
@@ -9,6 +9,7 @@ FROM nanoserver/mysql
 MAINTAINER git@ksa.llc
 
 ADD https://s3.amazonaws.com/assets.ksa.llc/suitecrm/suitecrm-7.11.zip suitecrm.zip
+ADD https://getcomposer.org/download/1.10.8/composer.phar composer.phar
 
 RUN MySQL --user=root --password="2v3%ZRe#vHhG" --connect-expired-password -Bse "ALTER USER 'root'@'localhost' IDENTIFIED BY 'Password123';" & \
 MySQL --user=root --password="Password123" -Bse "CREATE DATABASE suitecrm CHARACTER SET utf8 COLLATE utf8_bin;" & \
@@ -19,9 +20,12 @@ MySQL --user=root --password="Password123" -Bse "GRANT ALL PRIVILEGES ON `suitec
 MySQL --user=root --password="Password123" -Bse "SHOW DATABASES;"
 
 RUN powershell -Command \
+  Copy-Item -Path c:\composer.phar -Destination c:\bin\composer.phar \
   Expand-Archive -Path c:\suitecrm.zip -DestinationPath C:\inetpub\wwwroot ; \
-  ICACLS C:\inetpub\wwwroot\SuiteCRM-master /INHERITANCE:R ; \
-  ICACLS C:\inetpub\wwwroot\SuiteCRM-master /T /C /L /Q /GRANT BUILTIN\IIS_IUSRS:F ; \
-  ICACLS C:\inetpub\wwwroot\SuiteCRM-master /T /GRANT Administrators:F ; \
-  ICACLS C:\inetpub\wwwroot\SuiteCRM-master /setowner BUILTIN\IIS_IUSRS /T /C /L /Q
+  Rename-Item -Path C:\inetpub\wwwroot\SuiteCRM-master -NewName suitecrm \
+  ICACLS C:\inetpub\wwwroot\suitecrm /INHERITANCE:R ; \
+  ICACLS C:\inetpub\wwwroot\suitecrm /T /C /L /Q /GRANT BUILTIN\IIS_IUSRS:F ; \
+  ICACLS C:\inetpub\wwwroot\suitecrm /T /GRANT Administrators:F ; \
+  ICACLS C:\inetpub\wwwroot\suitecrm /setowner BUILTIN\IIS_IUSRS /T /C /L /Q
 RUN powershell -command rm -Recurse c:\*.zip -Force
+RUN powershell -command rm -Recurse c:\*.phar -Force
